hphp/test/zend/bad/unset_cv09.php
<?php
$x = "ok\n";
echo array_pop($GLOBALS);
echo $x;
echo "ok\n";
?>